# ovat

./: .gitignore  README.md  pyproject.toml
examples/: minimal.yml  workflow.yml
ovat/agent/: factory.py  langchain_agent.py  loop.py  rag_chat.py  session.py
ovat/cli/: diagnostics.py  main.py  ui.py
ovat/config/: workflow.py
ovat/core/: device_manager.py  model_manager.py  model_server.py
ovat/providers/: base.py  embeddings_genai.py  embeddings_ovms.py  llm_genai.py  llm_ovms.py  retriever_sqlitevec.py  vlm_genai.py
ovat/rag/: __init__.py  indexer.py
ovat/tools/: search_docs.py  transcribe.py
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_factory.py  test_langchain.py  test_loop.py  test_ovms_live.py  test_providers.py  test_rag.py  test_rag_chat.py  test_rag_live.py  test_session.py  test_tools.py
