[project]
name = "ovat"
version = "0.1.0"
description = "Agentic Toolkit for AI PC with OpenVINO — turn agent boilerplate into one YAML + one command."
requires-python = ">=3.10"
dependencies = [
  "openvino",
  "openvino-genai",
  "openai",
  "typer",
  "pydantic>=2",
  "pyyaml",
  "pillow",
  "fastmcp",
  "sqlite-vec",
]

# The react agent (agent.type: react) needs LangChain. It is an extra so the
# base install stays light; `pip install 'ovat[langchain]'` turns it on.
[project.optional-dependencies]
langchain = ["langchain>=1", "langchain-openai>=1", "langgraph>=1"]
dev = ["pytest", "pytest-cov", "langchain>=1", "langchain-openai>=1", "langgraph>=1"]

[tool.pytest.ini_options]
markers = [
  "live: tests that need a running OVMS server (AI PC only, skipped elsewhere)",
]

[project.scripts]
ovat = "ovat.cli.main:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Only package the `ovat` source tree. Without this, setuptools' flat-layout
# auto-discovery breaks when a non-package folder appears in the repo root
# (e.g. a `models/` download from `ovat serve`, or an extracted `ovms_linux/`).
[tool.setuptools.packages.find]
include = ["ovat*"]
